hphp/test/zend/good/Zend/tests/closure_022.php.expectf

Catchable fatal error: Closure object cannot have properties in %s/closure_022.php on line 5
